[gd_scene load_steps=21 format=3 uid="uid://bj2q1b3ixuh5l"]

[ext_resource type="Texture2D" uid="uid://c42b7qf5bgvxu" path="res://assets/ui/Modern_UI_Style_1_32x32.png" id="1_svms1"]
[ext_resource type="Script" path="res://hud/dialogue_box.gd" id="1_xi0gn"]
[ext_resource type="FontFile" uid="uid://c6irlwty7tcfx" path="res://assets/fonts/arialbd.ttf" id="2_md3qd"]
[ext_resource type="AudioStream" uid="uid://dlfmiky1ky66k" path="res://assets/audio/dialogue/dialogue1.wav" id="5_5jctj"]
[ext_resource type="AudioStream" uid="uid://d2ywo43mmq2wp" path="res://assets/audio/dialogue/dialogue2.wav" id="6_d7oxk"]
[ext_resource type="AudioStream" uid="uid://bhmr2emqwwxac" path="res://assets/audio/dialogue/dialogue3.wav" id="7_kud0v"]
[ext_resource type="AudioStream" uid="uid://c6vl7rbv4oav0" path="res://assets/audio/dialogue/dialogue4.wav" id="8_clrpq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sr1hb"]
atlas = ExtResource("1_svms1")
region = Rect2(24, 502, 48, 50)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qisbx"]
load_path = "res://.godot/imported/Modern_UI_Style_1_32x32.png-b22e771e9651ddabc6ceb95e89042766.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_hfvsu"]
atlas = SubResource("CompressedTexture2D_qisbx")
region = Rect2(748, 14, 10, 8)

[sub_resource type="Animation" id="Animation_sra84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 65)]
}

[sub_resource type="Animation" id="Animation_hybvb"]
resource_name = "default"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(315, 65), Vector2(315, 59), Vector2(315, 61)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0m1o"]
_data = {
"RESET": SubResource("Animation_sra84"),
"default": SubResource("Animation_hybvb")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_uosli"]
atlas = SubResource("CompressedTexture2D_qisbx")
region = Rect2(554, 44, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucuwb"]
atlas = SubResource("CompressedTexture2D_qisbx")
region = Rect2(202, 42, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpw6"]
atlas = SubResource("CompressedTexture2D_qisbx")
region = Rect2(200, 8, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhe6q"]
atlas = ExtResource("1_svms1")
region = Rect2(30, 222, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_iad71"]
atlas = ExtResource("1_svms1")
region = Rect2(800, 128, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_4tjn6"]
font = ExtResource("2_md3qd")
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sp2c0"]
streams_count = 4
stream_0/stream = ExtResource("5_5jctj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("6_d7oxk")
stream_1/weight = 1.0
stream_2/stream = ExtResource("7_kud0v")
stream_2/weight = 1.0
stream_3/stream = ExtResource("8_clrpq")
stream_3/weight = 1.0

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_xi0gn")

[node name="DialogueRect" type="NinePatchRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -87.0
offset_right = -81.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_sr1hb")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Deco" type="Control" parent="DialogueRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="DialogueRect/Deco"]
layout_mode = 0
offset_left = 315.0
offset_top = 65.0
offset_right = 325.0
offset_bottom = 73.0
texture = SubResource("AtlasTexture_hfvsu")
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueRect/Deco/TextureRect"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_x0m1o")
}

[node name="TextureRect2" type="TextureRect" parent="DialogueRect/Deco"]
layout_mode = 0
offset_left = 315.0
offset_top = 9.0
offset_right = 325.0
offset_bottom = 19.0
texture = SubResource("AtlasTexture_uosli")
stretch_mode = 2

[node name="Button" type="Button" parent="DialogueRect/Deco/TextureRect2"]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0
flat = true

[node name="TextureRect3" type="TextureRect" parent="DialogueRect/Deco"]
layout_mode = 0
offset_left = 297.0
offset_top = 59.0
offset_right = 311.0
offset_bottom = 73.0
texture = SubResource("AtlasTexture_ucuwb")
stretch_mode = 2

[node name="TextureRect4" type="TextureRect" parent="DialogueRect/Deco"]
layout_mode = 0
offset_left = 74.0
offset_top = 11.0
offset_right = 88.0
offset_bottom = 25.0
texture = SubResource("AtlasTexture_qlpw6")
stretch_mode = 2

[node name="FaceItem" type="NinePatchRect" parent="DialogueRect"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 70.0
offset_bottom = 69.0
texture = SubResource("AtlasTexture_nhe6q")

[node name="Face" type="TextureRect" parent="DialogueRect/FaceItem"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 52.0
texture = SubResource("AtlasTexture_iad71")

[node name="Label" type="Label" parent="DialogueRect"]
layout_mode = 0
offset_left = 83.0
offset_top = 18.0
offset_right = 301.0
offset_bottom = 52.0
text = "Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum..."
label_settings = SubResource("LabelSettings_4tjn6")
autowrap_mode = 2

[node name="WritingSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sp2c0")
bus = &"sfx"

[node name="WritingDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="DialogueRect/Deco/TextureRect2/Button" to="." method="_on_button_pressed"]
